<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey2">

        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/cardInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardImage"
            android:padding="8dp"
            android:text="@string/img_info"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardInfo"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/goBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/go_booking"
                android:textColor="@color/grey"
                android:backgroundTint="@color/yellow"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/delete"
                android:textColor="@color/grey"
                android:backgroundTint="@color/yellow"/>


        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>